force-app/main/default/objects/Rejection_Defect__c/fields/Applies__c.field-meta.xml
<CustomField>
    <fullName>Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies?</label>
    <type>Checkbox</type>
</CustomField>