force-app/main/default/objects/Rejection_Defect__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <label>Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipLabel>Rejection Defects</relationshipLabel>
    <relationshipName>Rejection_Defects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>