force-app/main/default/objects/Rejection_Defect__c/fields/Description_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Defect__c</fullName>
    <label>Description of Defect</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>