force-app/main/default/objects/Rejection_Defect__c/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <inlineHelpText>Use this for internal notes that will not show on the defect letter</inlineHelpText>
    <label>Internal Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>