force-app/main/default/objects/Rejection_Defect__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>