force-app/main/default/objects/Rejection_Defect__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Rejection Defects</relationshipLabel>
    <relationshipName>Rejection_Defects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>