force-app/main/default/objects/Rejection_Defect__c/fields/Rejection__c.field-meta.xml
<CustomField>
    <fullName>Rejection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejection</label>
    <referenceTo>Rejection__c</referenceTo>
    <relationshipLabel>Rejection Defects</relationshipLabel>
    <relationshipName>Rejection_Defects</relationshipName>
    <type>Lookup</type>
</CustomField>