force-app/main/default/objects/Rejection_Defect__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Values from this field roll up to Registration via DLRS</description>
    <inlineHelpText>Has this defect been resolved?</inlineHelpText>
    <label>Resolved?</label>
    <type>Checkbox</type>
</CustomField>