force-app/main/default/objects/Rejection_Defect__c/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <label>Sub-Section</label>
    <length>40</length>
    <type>Text</type>
</CustomField>