force-app/main/default/objects/Rejection_Defect__c/fields/VIPAgreements__c.field-meta.xml
<CustomField>
    <fullName>VIPAgreements__c</fullName>
    <formula>IF(RecordType.Name = "Agreements", true, false)</formula>
    <label>VIP Agreements</label>
    <type>Checkbox</type>
</CustomField>