force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyLocations__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyLocations__c</fullName>
    <formula>IF(RecordType.Name = "Company Locations", true, false)</formula>
    <label>VIP Company Locations</label>
    <type>Checkbox</type>
</CustomField>