force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyManagers__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyManagers__c</fullName>
    <formula>IF(RecordType.Name = "Company Managers", true, false)</formula>
    <label>VIP Company Managers</label>
    <type>Checkbox</type>
</CustomField>