force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyTaxInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyTaxInformation__c</fullName>
    <formula>IF(RecordType.Name = "Company Tax Information", true, false)</formula>
    <label>VIP Company Tax Information</label>
    <type>Checkbox</type>
</CustomField>