force-app/main/default/objects/Rejection_Defect__c/fields/VIPMedicalInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPMedicalInformation__c</fullName>
    <formula>IF(RecordType.Name = "Medical Information", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Medical Information</label>
    <type>Checkbox</type>
</CustomField>