force-app/main/default/objects/Rejection_Defect__c/fields/VIPPermitApplicant__c.field-meta.xml
<CustomField>
    <fullName>VIPPermitApplicant__c</fullName>
    <formula>IF(RecordType.Name = "Permit Applicant", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Permit Applicant</label>
    <type>Checkbox</type>
</CustomField>