force-app/main/default/objects/Rejection_Defect__c/fields/VIPQualifyingQuestion__c.field-meta.xml
<CustomField>
    <fullName>VIPQualifyingQuestion__c</fullName>
    <formula>IF(RecordType.Name = "Qualifying Question", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Qualifying Question</label>
    <type>Checkbox</type>
</CustomField>