force-app/main/default/objects/Rejection_Defect__c/fields/VIPSchoolInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPSchoolInformation__c</fullName>
    <formula>IF(RecordType.Name = "School Information", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP School Information</label>
    <type>Checkbox</type>
</CustomField>