force-app/main/default/objects/Rejection_Defect__c/fields/VIPUploadDocument__c.field-meta.xml
<CustomField>
    <fullName>VIPUploadDocument__c</fullName>
    <formula>IF(RecordType.Name = "Upload Documentation",true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Upload Document</label>
    <type>Checkbox</type>
</CustomField>