force-app/main/default/objects/Rejection_Defect__c/fields/VIPWorkersComp__c.field-meta.xml
<CustomField>
    <fullName>VIPWorkersComp__c</fullName>
    <formula>IF(RecordType.DeveloperName = "Workers_Compensation_Insurance", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Workers Comp</label>
    <type>Checkbox</type>
</CustomField>