force-app/main/default/objects/Rejection_Defect__c/recordTypes/Agent_Authorization.recordType-meta.xml
<RecordType>
    <fullName>Agent_Authorization</fullName>
    <active>true</active>
    <description>defects related to agents</description>
    <label>Agent Authorization</label>
</RecordType>