force-app/main/default/objects/Rejection_Defect__c/recordTypes/Agreements.recordType-meta.xml
<RecordType>
    <fullName>Agreements</fullName>
    <active>true</active>
    <label>Agreements</label>
</RecordType>