force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Contact.recordType-meta.xml
<RecordType>
    <fullName>Company_Contact</fullName>
    <active>true</active>
    <label>Company Contact</label>
</RecordType>