force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Information.recordType-meta.xml
<RecordType>
    <fullName>Company_Information</fullName>
    <active>true</active>
    <label>Company Information</label>
</RecordType>