force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Locations.recordType-meta.xml
<RecordType>
    <fullName>Company_Locations</fullName>
    <active>true</active>
    <label>Company Locations</label>
</RecordType>