force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Tax_Information.recordType-meta.xml
<RecordType>
    <fullName>Company_Tax_Information</fullName>
    <active>true</active>
    <label>Company Tax Information</label>
</RecordType>