force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Type.recordType-meta.xml
<RecordType>
    <fullName>Company_Type</fullName>
    <active>true</active>
    <label>Company Type</label>
</RecordType>