force-app/main/default/objects/Rejection_Defect__c/recordTypes/Disclaimer.recordType-meta.xml
<RecordType>
    <fullName>Disclaimer</fullName>
    <active>true</active>
    <label>Disclaimer</label>
</RecordType>