force-app/main/default/objects/Rejection_Defect__c/recordTypes/Fees.recordType-meta.xml
<RecordType>
    <fullName>Fees</fullName>
    <active>true</active>
    <label>Fees</label>
</RecordType>