force-app/main/default/objects/Rejection_Defect__c/recordTypes/Follow_up_Questions.recordType-meta.xml
<RecordType>
    <fullName>Follow_up_Questions</fullName>
    <active>true</active>
    <label>Follow up Questions</label>
</RecordType>