force-app/main/default/objects/Rejection_Defect__c/recordTypes/Medical_Information.recordType-meta.xml
<RecordType>
    <fullName>Medical_Information</fullName>
    <active>true</active>
    <label>Medical Information</label>
</RecordType>