force-app/main/default/objects/Rejection_Defect__c/recordTypes/Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Questionnaire</fullName>
    <active>true</active>
    <label>Questionnaire</label>
</RecordType>