force-app/main/default/objects/Rejection_Defect__c/recordTypes/Registration_Duration.recordType-meta.xml
<RecordType>
    <fullName>Registration_Duration</fullName>
    <active>true</active>
    <label>Registration Duration</label>
</RecordType>