force-app/main/default/objects/Rejection_Defect__c/recordTypes/School_Information.recordType-meta.xml
<RecordType>
    <fullName>School_Information</fullName>
    <active>true</active>
    <label>School Information</label>
</RecordType>