force-app/main/default/objects/Rejection_Defect__c/recordTypes/Upload_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Upload_Documentation</fullName>
    <active>true</active>
    <label>Upload Documentation</label>
</RecordType>