force-app/main/default/objects/Rejection_Defect__c/recordTypes/WCI_Documentation.recordType-meta.xml
<RecordType>
    <fullName>WCI_Documentation</fullName>
    <active>true</active>
    <description>For WCI Documentation section defects</description>
    <label>WCI Documentation</label>
</RecordType>