force-app/main/default/objects/Rejection_Defect__c/recordTypes/Workers_Comp.recordType-meta.xml
<RecordType>
    <fullName>Workers_Comp</fullName>
    <active>true</active>
    <label>Workers Comp</label>
</RecordType>