force-app/main/default/objects/Rejection_Defect__c/recordTypes/Workers_Compensation_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Workers_Compensation_Insurance</fullName>
    <active>true</active>
    <label>Workers Compensation Insurance</label>
</RecordType>